--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebvIv354u-modal" data-bs-target="#uebvIv354u-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebwK8JGQb-modal" data-bs-target="#uebwK8JGQb-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -161,8 +161,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Upacara Bendera setiap hari Senin</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebvIv354u-modal" data-bs-target="#uebvIv354u-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebwK8JGQb-modal" data-bs-target="#uebwK8JGQb-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -170,8 +170,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Kegiatan Rutin Senam Pagi setiap hari Jum'at</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebvIv354u-modal" data-bs-target="#uebvIv354u-modal">
-                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebwK8JGQb-modal" data-bs-target="#uebwK8JGQb-modal">
+                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -179,8 +179,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Kegiatan Rutin Giat Literasi Jum'at</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebvIv354u-modal" data-bs-target="#uebvIv354u-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uebwK8JGQb-modal" data-bs-target="#uebwK8JGQb-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -189,11 +189,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="uebvIv354u-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="uebwK8JGQb-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-uebvIv354u" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-uebwK8JGQb" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder">
@@ -209,18 +209,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uebvIv354u" data-bs-target="#lb-uebvIv354u"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-uebwK8JGQb" data-bs-target="#lb-uebwK8JGQb"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-uebvIv354u">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-uebwK8JGQb">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-uebvIv354u">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-uebwK8JGQb">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -255,7 +255,7 @@
                         <strong>Kontak Kami</strong></h5>
                     <ul class="list mbr-fonts-style display-7">
                         <li class="mbr-text item-wrap">WhatsApp : <a href="https://wa.me/6281350188914" class="text-primary">0813 5018 8914</a>&nbsp;(Kepala Sekolah)</li>
-                        <li class="mbr-text item-wrap">WhatsApp : <a href="https://wa.me/6281249210671" class="text-primary">0812 4921 0671</a>&nbsp;(Waka Kurikulum)</li>
+                        <li class="mbr-text item-wrap">WhatsApp : 0812 4921 0671 (Guru Kurikulum)</li>
                         <li class="mbr-text item-wrap">Email : <a href="mailto:sdn007malkot0708@gmail.com" class="text-primary">sdn007malkot0708@gmail.com</a></li><li class="mbr-text item-wrap">Alamat : Desa Pelita Kanaan, Kec. Malinau Kota, Kabupaten Malinau, Kalimantan Utara</li>
                     </ul>
                     </div>
@@ -283,7 +283,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
